--- a/DREA/Views/Documento/Index.cshtml
+++ b/DREA/Views/Documento/Index.cshtml
@@ -1,65 +1,55 @@
-﻿@model IEnumerable<DREA.Modelo.Documento>
-
-<h2>Lista de Documentos</h2>
+﻿@model List<DREA.Modelo.Documento>
 
 <p>
-    @Html.ActionLink("Crear Documento", "Crear")
+    <a href="@Url.Action("Crear","Documento")" class="btn btn-sm btn-indigo">Nuevo Documento</a>
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Nombre)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.NroDoc)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Fecha)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Estado)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Oficina.Nombre)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.TipoDoc.Nombre)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Usuario.Nombre)
-        </th>
-        <th></th>
-    </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Nombre)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.NroDoc)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Fecha)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Estado)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Oficina.Nombre)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.TipoDoc.Nombre)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Usuario.Nombre)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.DocumentoId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.DocumentoId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.DocumentoId })
-        </td>
-    </tr>
-}
 
-</table>
+<section>
+
+    <div class="card">
+        <div class="card-body">
+
+            <!--Table-->
+            <table class="table table-hover">
+
+                <!--Table head-->
+                <thead>
+                    <tr>
+                        <th>#</th>
+                        <th>Nombre</th>
+                        <th>Nro</th>
+                        <th>Fecha</th>
+                        <th>Tipo Documento</th>
+                        <th>Oficina</th>
+                        <th>Estado</th>
+                    </tr>
+                </thead>
+                <!--Table head-->
+                <!--Table body-->
+                <tbody>
+                    @foreach (var item in Model)
+                    {
+                    <tr>
+                        <th scope="row">@item.DocumentoId</th>
+                        <td>@item.Nombre</td>
+                        <td>@item.NroDoc</td>
+                        <td>@item.Fecha</td>
+                        <td>@item.TipoDoc.Nombre</td>
+                        <td>@item.Oficina.Nombre</td>
+                        <td>@item.Estado</td>
+                        <td>
+                            <a href="@Url.Action("Editar","Documento",new { id = item.DocumentoId })" class="btn btn-sm btn-indigo">Editar</a>
+                        </td>
+                    </tr>
+                    }
+
+                </tbody>
+                <!--Table body-->
+            </table>
+            <!--Table-->
+
+        </div>
+    </div>
+
+</section>
