--- a/DREA/Views/Shared/_Layout.cshtml
+++ b/DREA/Views/Shared/_Layout.cshtml
@@ -141,6 +141,7 @@
     <script type="text/javascript" src="~/js/bootstrap.js"></script>
     <!-- MDB core JavaScript -->
     <script type="text/javascript" src="~/js/mdb.min.js"></script>
+    <script src="~/js/jquery.form.min.js"></script>
     <!--Initializations-->
     <script>
         // SideNav Initialization
