--- a/DREA/Views/Documento/Adjuntos.cshtml
+++ b/DREA/Views/Documento/Adjuntos.cshtml
@@ -3,10 +3,11 @@
 <div class="row">
     @foreach (var i in Model)
     {
-        <div class="col-xs-6 col-md-3">
+        <div class="col-xs-6 col-md-4">
             <a href="~/Documentos/@i.Archivo" class="thumbnail" target="_blank">
                 <img src="~/img/doc.png" style="width:100px; height:100px" />                
             </a>
+            <p>@i.Archivo</p>
             <p class="text-center"><a href="#" class="btn btn-danger" role="button" onclick="EliminarImagen(@i.DocumentoDetId)">Eliminar</a></p>
         </div>
     }
